--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,6 @@
   text-rendering: optimizelegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  width: 100%;
-  height: 100vh;
   background-color: #fff;
   color: black;
 }
@@ -20,6 +18,11 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+}
+
+#root {
+  width: 100vw;
+  height: 100vh;
 }
 
 .priceUp {
